tree-sitter-ghc-dump/test/corpus/basic.txt
================================
Two sections
================================

==================== Tidy Core ====================
a = 1

==================== Output Cmm ====================
b:

--------------------------------

(source_file
  (section
    (banner)
    (body))
  (section
    (banner)
    (body)))

================================
Leading preamble before first banner
================================

warning: [-Wfoo] something
==================== Final STG: ====================
x = \r [] y

--------------------------------

(source_file
  (body)
  (section
    (banner)
    (body)))

================================
Banner with empty body
================================

==================== Tidy Core ====================
==================== Output Cmm ====================
c:

--------------------------------

(source_file
  (section
    (banner))
  (section
    (banner)
    (body)))
